--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="header">
         <h1>Welcome To My Library</h1>
     </div>
-    <div class="display"></div>
+    <div class="display" id="diisplay"></div>
     <div class="addBookForm">
         <button class="AddNew"> Add New Book</button>
         <div class="bookForm" style="display: none;">
